--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -47,6 +47,8 @@
 			}
 		},
 		"blogs": {
+			"title": "BLOG",
+			"subtitle": "Read about VISALP and other related topics.",
 			"blog1": {
 				"title": "Blog 1",
 				"description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
