--- a/src/lib/locales/hu.json
+++ b/src/lib/locales/hu.json
@@ -47,6 +47,7 @@
 			}
 		},
 		"blogs": {
+			"no_blog_msg": "Még nincsenek blogbejegyzéseink.",
 			"title": "BLOG",
 			"subtitle": "Olvass a VISALP-ról és a hozzá kapcsolódó témákról",
 			"blog1": {
@@ -66,6 +67,11 @@
 				"description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
 			},
 			"read_more": "Read More"
+		},
+		"contact": {
+			"title": "Kérdésed van?",
+			"subtitle": "Nyugodtan fordulj hozzánk, szívesen segítünk.",
+			"contact_btn": "Kapcsolat"
 		}
 	},
 	"apps_page": {
