refactor: change privacy policy text content

--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -114,9 +114,8 @@
 	},
 	"privacy_policy_page": {
 		"title": "Privacy Policy",
-		"last_updated": "Last Updated: January 2025",
-		"intro_1": "Welcome to VISALP. We respect your privacy and are committed to protecting the personal information you share with us.",
-		"intro_2": "This Privacy Policy explains how VISALP (\"we,\" \"us,\" or \"our\") collects, uses, and discloses information when you visit our website (<a href=\"https://www.visalp.hu/\" class=\"text-blue-600 hover:underline\">https://www.visalp.hu/</a>) or use our desktop or mobile software applications (collectively, the \"Services\").",
+		"last_updated": "Last Updated: 18/12/2025",
+		"intro": "This Privacy Policy explains how VISALP (\"we,\" \"us,\" or \"our\") collects, uses, and discloses information when you visit our website (<a href=\"https://www.visalp.hu/\" class=\"text-blue-600 hover:underline\">https://www.visalp.hu/</a>) or use our desktop or mobile software applications (collectively, the \"Services\").",
 		"sections": {
 			"1": {
 				"title": "1. Our Philosophy",
